[package]
name    = "syndebug-macros"
version = "0.1.0"
edition = "2024"

workspace = ".."

[lints.rust]
unused_parens = "allow"


[lib]
proc-macro = true


[dependencies.proc-macro2]
version = "1.0"

[dependencies.syn]
version = "2.0"

[dependencies.quote]
version = "1.0"

[dependencies.proc-macro-crate]
version = "3.3"
